# v4l2rtspserver

./: .cirrus.yml  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.arm64  Dockerfile.rpi  IMPLEMENTATION_NOTES.md  Makefile  PR_COMMENT.txt  README.md  README.mdown  ServerMediaSubsession.cpp  ServerMediaSubsession.h  TESTING_GUIDE.md  V4l2DeviceSource.cpp  V4l2DeviceSource.h  h264_v4l2_rtspserver.cpp  h264_v4l2_rtspserver.h  hls.js  index.html  main.cpp  mips.toolchain  nanopi.toolchain  raspberry.toolchain  test_h264.sh  test_mjpeg.sh  v4l2rtspserver.service.in
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ccpp.yml  codeql-analysis.yml  cross-armhf.yml  cross-mips.yml  cross.yml  docker.yml  mirror.yaml  ort.yml  pi-cross.yml  scorecard.yml  trivy.yml
CMake/: FindBasicUsageEnvironment.cmake  FindGroupSock.cmake  FindLiveMedia.cmake  FindlibUsageEnvironment.cmake
debian/: changelog  control
inc/: ALSACapture.h  AddH26xMarkerFilter.h  AudioCompressor.h  BaseServerMediaSubsession.h  DeviceInterface.h  DeviceSource.h  DeviceSourceFactory.h  H264DebugDumper.h  H264_V4l2DeviceSource.h  H265_V4l2DeviceSource.h  H26x_V4l2DeviceSource.h  HTTPServer.h  MJPEGVideoSource.h  MP3ALSACapture.h  MP3AudioCompressor.h  MP4Muxer.h  MemoryBufferSink.h  MulticastServerMediaSubsession.h  NullAudioCompressor.h  QuickTimeMuxer.h  SegmentServerMediaSubsession.h  ServerMediaSubsession.h  SnapshotManager.h  TSServerMediaSubsession.h  UnicastServerMediaSubsession.h  V4L2DeviceSource.h  V4l2Capture.h  V4l2Device.h  V4l2DeviceSource.h  V4l2MMAPDeviceSource.h  V4l2MmapCapture.h  V4l2READDeviceSource.h  V4l2RTSPServer.h  V4l2ReadCapture.h  VideoCaptureAccess.h  logger.h
snap/: snapcraft.yaml
snap/hooks/: configure  install
src/: ALSACapture.cpp  AudioCompressor.cpp  DeviceSource.cpp  H264DebugDumper.cpp  H264_V4l2DeviceSource.cpp  H265_V4l2DeviceSource.cpp  H26x_V4l2DeviceSource.cpp  HTTPServer.cpp  MJPEGVideoSource.cpp  MP3ALSACapture.cpp  MP3AudioCompressor.cpp  MP4Muxer.cpp  MemoryBufferSink.cpp  MulticastServerMediaSubsession.cpp  NullAudioCompressor.cpp  QuickTimeMuxer.cpp  SegmentServerMediaSubsession.cpp  ServerMediaSubsession.cpp  SnapshotManager.cpp  TSServerMediaSubsession.cpp  UnicastServerMediaSubsession.cpp  V4L2DeviceSource.cpp  V4l2Capture.cpp  V4l2Device.cpp  V4l2DeviceSource.cpp  V4l2MMAPDeviceSource.cpp  V4l2MmapCapture.cpp  V4l2READDeviceSource.cpp  V4l2RTSPServer.cpp  V4l2ReadCapture.cpp  main.cpp
